charon/tests/ui/unsupported/gat.out
disabled backtrace
error[E9999]: Cannot handle error `FulfillmentError` selecting `Binder { value: <<Self as ArraySize>::ArrayType<T> as Foo>, bound_vars: [] }`
  |
  = note: ⚠️ This is a bug in Hax's frontend.
          Please report this error to https://github.com/hacspec/hax/issues with some context (e.g. the current crate)!

error: Thread panicked when extracting item `test_crate::ArraySize`.
 --> tests/ui/unsupported/gat.rs:5:1
  |
5 | trait ArraySize {
  | ^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::ArraySize
 --> tests/ui/unsupported/gat.rs:5:1
  |
5 | trait ArraySize {
  | ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

[ERROR charon_driver:249] Compilation encountered 2 errors
Error: Charon driver exited with code 1
